--- a/css/style.css
+++ b/css/style.css
@@ -52,6 +52,10 @@ nav ul li a{
     font-size: 13px;
 }
 
+nav ul li a:hover{
+    color: rgba(255, 255, 255, 0.324);
+}
+
 .row{
     display: flex;
     height: 88%;
