--- a/css/style1.css
+++ b/css/style1.css
@@ -7,7 +7,7 @@ body{
 }
 
 .wrapper{
-    width: 1170px;
+    width: 100%;
 }
 
 header{
@@ -40,14 +40,17 @@ header{
 }
 
 nav{
+    display: flex;
+    justify-content: flex-end;
     float: right;
     line-height: 100px;
+    margin-right: 85px;
 }
 nav a{
     text-decoration: none;
-    font-family: 'Robotto' sans-serif;
+    font-family: arial;
     letter-spacing: 4px;
-    font-size: 13px;
+    font-size: 15px;
     margin: 0 25px;
     color: white;
 }
@@ -65,11 +68,12 @@ nav a{
 
 .banner-area h2{
     padding-top: 8%;
-    font-size: 70px;
+    font-size: 90px;
     font-family: Arial, Helvetica, sans-serif;
     font-weight: bold;
     text-transform: uppercase;
     color: white;
+    mix-blend-mode: overlay;
 }
 .content-area{
     width: 100%;
@@ -81,17 +85,17 @@ nav a{
 }
 
 .content-area h2{
-    font-family: bignoodletitling;
+    font-family: arial;
     letter-spacing: 4px;
     padding-top: 30px;
     font-size: 40px;
     margin: 0;
-    padding-left: 120px;
+    padding-left: 0px;
 }
 
 .content-area p{ 
     padding: 2% 0;
-    font-family: Arial Armenian;
+    font-family: Arial;
     line-height: 30px;
-    padding-left: 100px;
+    padding-left: 10px;
 }
