--- a/css/style.css
+++ b/css/style.css
@@ -3,6 +3,11 @@
     padding: 0;
     font-family: arial;
 }
+body{
+  background: url(../img/Background-X-Repeat2.jpg);
+  background-size: 300px;
+  background-repeat: repeat;
+}
 
 .container{
     width: 100%;
@@ -14,11 +19,18 @@
     padding-right: 8%;
     box-sizing: border-box;
 }
+@media screen and (max-width: 361px) {
+  .container{
+    width: 360px;
+    background-size: 500px;
+    background-repeat: no-repeat;
+    background-position-y: top;
+  }
+}
 .navbar{
     height: 12%;
     display: flex;
     align-items: center;
-
 }
 
 .logo{
@@ -50,6 +62,52 @@ nav ul li a{
 nav ul li a:hover{
     color: rgba(255, 255, 255, 0.324);
 }
+@media screen and (max-width: 361px) {
+      /* Dropdown Button */
+    .dropbtn {
+      background-color: transparent;
+      color: white;
+      font-size: 10px;
+      border: none;
+      cursor: pointer;
+      width: 40px;
+      transition: 0.5s;
+    }
+
+    /* Dropdown button on hover & focus */
+    .dropbtn:hover, .dropbtn:focus {
+      background-color: transparent;
+    }
+    .dropdown {
+      position: relative;
+      display: inline-block;
+    }
+
+    /* Dropdown Content (Hidden by Default) */
+    .dropdown-content {
+      display: none;
+      position: absolute;
+      background-color: #f1f1f1;
+      min-width: 160px;
+      box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+      z-index: 1;
+    }
+
+    /* Links inside the dropdown */
+    .dropdown-content li a {
+      color: black;
+      padding: 12px 16px;
+      display: block;
+    }
+
+    /* Change color of dropdown links on hover */
+    .dropdown-content li a:hover {background-color: #ddd;}
+
+    .show{
+      display: block;
+    }
+}
+
 
 .row{
     display: flex;
@@ -57,6 +115,7 @@ nav ul li a:hover{
     align-items: center;
     user-select: none;
 }
+
 .col{
     flex-basis: 50%;
 }
@@ -66,31 +125,115 @@ h1{
     color: white;
     font-size: 150px;
 }
-
 p{
-    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-    color: white;
-    font-size: 18px;
-    line-height: 25px;
-    padding-top: 20px;
+  font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+  color: white;
+  font-size: 18px;
+  line-height: 25px;
+  padding-top: 20px;
+}
+.typewriter h1 {
+  color: #fff;
+  width: 149px;
+  overflow: hidden; /* Ensures the content is not revealed until the animation */
+  border-right: .15em solid orange; /* The typwriter cursor */
+  white-space: nowrap; /* Keeps the content on a single line */
+  margin: 0 auto; /* Gives that scrolling effect as the typing happens */ /* Adjust as needed */
+  animation: 
+    typing 3.5s steps(30, end),
+    blink-caret .5s step-end infinite;
 }
 
-button{
-    width: 200px;
-    color:#000;
-    font-size: 12px;
-    padding: 10px 0;
-    border: 0;
-    border-radius: 25px;
-    outline: none;
-    margin-top: 30px;
-    cursor: pointer;
-    transition: 0.5s;
+/* The typing effect */
+@keyframes typing {
+  from { width: 0 }
+  to { width: 149px }
 }
 
-button:hover{
-     background: rgba(120, 119, 119, 0.359);
+/* The typewriter cursor effect */
+@keyframes blink-caret {
+  from, to { border-color: transparent }
+  50% { border-color: orange }
 }
+
+.more{
+  width: 200px;
+  color:#000;
+  font-size: 12px;
+  padding: 10px 0;
+  border: 0;
+  border-radius: 25px;
+  outline: none;
+  margin-top: 30px;
+  cursor: pointer;
+  transition: 0.5s;
+}
+
+.more:hover{
+   background: rgba(120, 119, 119, 0.359);
+}
+
+
+
+
+/* --------------------Responsive------------------- */
+
+
+
+@media screen and (max-width: 361px) {
+  .navbar{
+    height: 8%;
+  }
+  .logo{
+    width: 100px;
+  }
+  .typewriter h1{
+    font-size: 30px;
+    margin-top: 15px;
+    margin-left: 0px;
+  }
+  .col{
+    width: 100%;
+    height: 135px;
+    flex-basis: 0%;
+  }
+  .col p{
+    display: none;
+  }
+  .row{
+    align-items: flex-start;
+    flex-direction: column;
+  }
+  .more{
+    color: #fff;
+    font-weight: 400;
+    width: 100px;
+    margin-top: 15px;
+    background: rgba(120, 119, 119, 0.65);
+  }
+
+}
+.panel{
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.panel img{
+  width: 200px;
+  opacity: 55%;
+}
+.panel p{
+  display: block;
+  position: absolute;
+  z-index: 5;
+  font-size: 8px;
+  line-height: 10px;
+  padding-left:10px;
+  padding-top: 60px;
+  text-align: center;
+}
+
 
 #slider {
     position: relative;
@@ -148,6 +291,29 @@ button:hover{
   #slider #prev:hover, #slider #next:hover {
     background-color: rgba(0, 0, 0, 0.5);
     text-shadow: 0;
+  }
+
+  @media screen and (max-width:361px) {
+    #slider{
+      width: 100%;
+      margin-left: 0;
+      height: 165px;
+      margin-top: 30px;
+    }
+    #slider ul li img{
+      width: 302px;
+      height: 205px;
+      background-size: cover;
+      display: block;
+      opacity: 55%;
+    }
+    #slider #prev {
+      left: 6px;
+      width: 5px;
+    }
+    #slider #next {
+      right: 6px;
+    }
   }
   .loading{
     width: 102.4%;
